--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ h1 {
         height: 100%;
         box-sizing: border-box;
         border-radius: 0;
+        overflow-y: hidden;
     }
     .main-area .row label{
         font-size: 20px;
